--- a/info.yaml
+++ b/info.yaml
@@ -1,11 +1,11 @@
 # Tiny Tapeout project information
 project:
-  title:        ""      # Project title
-  author:       ""      # Your name
+  title:        "ASYNCHRONOUS FIFO"      # Project title
+  author:       "VAGESH AND SAABIQ"      # Your name
   discord:      ""      # Your discord username, for communication and automatically assigning you a Tapeout role (optional)
-  description:  ""      # One line description of what your project does
+  description:  "A FIFO DESIGN"      # One line description of what your project does
   language:     "Verilog" # other examples include SystemVerilog, Amaranth, VHDL, etc
-  clock_hz:     0       # Clock frequency in Hz (or 0 if not applicable)
+  clock_hz:     50000000       # Clock frequency in Hz (or 0 if not applicable)
 
   # How many tiles your design occupies? A single tile is about 167x108 uM.
   tiles: "1x1"          # Valid values: 1x1, 1x2, 2x2, 3x2, 4x2, 6x2 or 8x2
@@ -29,34 +29,34 @@ project:
 # This section is for the datasheet/website. Use descriptive names (e.g., RX, TX, MOSI, SCL, SEG_A, etc.).
 pinout:
   # Inputs
-  ui[0]: ""
-  ui[1]: ""
-  ui[2]: ""
-  ui[3]: ""
-  ui[4]: ""
-  ui[5]: ""
-  ui[6]: ""
-  ui[7]: ""
+  ui[0]: "wdata[0]"
+  ui[1]: "wdata[1]"
+  ui[2]: "wdata[2]"
+  ui[3]: "wdata[3]"
+  ui[4]: "wdata[4]"
+  ui[5]: "wdata[5]"
+  ui[6]: "wdata[6]"
+  ui[7]: "wdata[7]"
 
   # Outputs
-  uo[0]: ""
-  uo[1]: ""
-  uo[2]: ""
-  uo[3]: ""
-  uo[4]: ""
-  uo[5]: ""
-  uo[6]: ""
-  uo[7]: ""
+  uo[0]: "rdata[0]"
+  uo[1]: "rdata[1]"
+  uo[2]: "rdata[2]"
+  uo[3]: "rdata[3]"
+  uo[4]: "rdata[4]"
+  uo[5]: "rdata[5]"
+  uo[6]: "rdata[6]"
+  uo[7]: "rdata[7]"
 
   # Bidirectional pins
-  uio[0]: ""
-  uio[1]: ""
+  uio[0]: "rempty"
+  uio[1]: "wfull"
   uio[2]: ""
-  uio[3]: ""
-  uio[4]: ""
+  uio[3]: "rrst_n"
+  uio[4]: "wrst_n"
   uio[5]: ""
-  uio[6]: ""
-  uio[7]: ""
+  uio[6]: "rinc"
+  uio[7]: "winc"
 
 # Do not change!
 yaml_version: 6
